# clinical-trial-machine-learning-for-biopharma-cdisc-sdtm-adam

./: Makefile  README.md  download_clinical_data.bat  download_clinical_data.sh  install_r_packages.R  pyproject.toml
artifacts/lineage/: lineage_manifest.csv
artifacts/models/: phase2_model_card.md  phase2_model_metrics.json
artifacts/phase1/: phase1_gate_memo.md  phase1_tables.xlsx
artifacts/phase2/: phase2_gate_memo.md  phase2_tables.xlsx
artifacts/phase3/: phase3_tables.xlsx  program_recommendation_memo.md
artifacts/qc/: adam_qc_summary.json  final_validation_report.md  harmonization_summary.json  ingestion_row_counts.csv  ingestion_summary.json  r_python_comparison_adae.csv  r_python_comparison_adsl.csv  safetydata_rda_export_log.csv  schema_validation_summary.json  synthetic_bridge_summary.json
config/: phase_1_protocol.yml  phase_2_protocol.yml  phase_3_protocol.yml  program_config.yml
docs/: index.html
metadata/: acquisition_log.md  disease_signal_index.md  gap_analysis.md  identifier_policy.md  provenance_map.csv  r_standards_note.md  source_inventory.csv  source_inventory.md  synthetic_generation_spec.md
r/: derive_adae_reference.R  derive_adsl_reference.R  export_safetydata_to_parquet.R
tests/: test_adam_derivations.py  test_final_artifacts.py  test_harmonization.py  test_ingest_rda_export.py  test_ingest_xpt.py  test_phase1_review.py  test_phase2_ml_review.py  test_phase3_review.py  test_r_reference_layer.py  test_reporting_site.py  test_schema_contracts.py  test_settings.py  test_source_inventory.py  test_synthetic_bridge.py
(+71 files in other folders)
