[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-trial-portfolio"
version = "0.1.0"
description = "Python-first hybrid portfolio scaffold for Phase I-III clinical development analytics"
readme = "00_PROJECT_OVERVIEW.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16.0",
  "duckdb>=1.1",
  "polars>=1.8",
  "pydantic>=2.8",
  "pandera>=0.20",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "lifelines>=0.30",
  "scikit-learn>=1.5",
  "shap>=0.46",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "plotly>=5.24",
  "jinja2>=3.1",
  "great-tables>=0.15",
  "openpyxl>=3.1",
  "xlsxwriter>=3.2",
  "networkx>=3.3",
  "rich>=13.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "ipykernel>=6.29"
]
reports = [
  "nbformat>=5.10",
  "kaleido>=0.2.1",
  "markdown>=3.7"
]
causal = [
  "dowhy>=0.11",
  "econml>=0.15"
]
rbridge = [
  "rpy2>=3.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
